# rdp-connector

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.mts
.claude/: napkin.md
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-pages.yml  release.yml  test-backend.yml  test-frontend.yml  test.yml
.junie/plans/: make-teams-feature-optional-via-build-flags-and-offer-different-release-types.md
.junie/reviews/: 2026-04-29-unstaged-changes.md
.junie/skills/code-review/: SKILL.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.mts
freerdp/: Dockerfile  build.sh  bundle.sh  run-xfreerdp.sh
src/: App.vue  components.d.ts  env.d.ts  main.ts  typed-router.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: advanced_commands.rs  lib.rs  main.rs
src-tauri/tests/: advanced_commands.rs
src/components/: AppFooter.vue  Loading.vue  README.md  RdpConnector.vue  SettingsChooser.vue  SettingsOptions.vue
src/pages/: main.vue  settings.vue
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/stores/: config.spec.ts  config.ts  log.spec.ts  log.ts  rdp-connection.spec.ts  rdp-connection.ts
src/types/: connection-config.ts  list-item.ts  logger.ts
